// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders as expected in basic state 1`] = `
<div
  className="css-iz9zke"
  onClick={[Function]}
>
  <p
    className="css-1h92lle"
  >
    1
  </p>
</div>
`;

exports[`renders with a green background when under check and correct 1`] = `
<div
  className="css-vbuhvi"
  onClick={[Function]}
>
  <p
    className="css-1h92lle"
  >
    1
  </p>
</div>
`;

exports[`renders with a light background when relevant 1`] = `
<div
  className="css-9v78r0"
  onClick={[Function]}
>
  <p
    className="css-1h92lle"
  >
    1
  </p>
</div>
`;

exports[`renders with a red background when under check and not correct 1`] = `
<div
  className="css-5xyamo"
  onClick={[Function]}
>
  <p
    className="css-1h92lle"
  >
    4
  </p>
</div>
`;

exports[`renders with background when selected 1`] = `
<div
  className="css-9v78r0"
  onClick={[Function]}
>
  <p
    className="css-1h92lle"
  >
    1
  </p>
</div>
`;

exports[`renders with bold text when locked 1`] = `
<div
  className="css-14zxudu"
  onClick={[Function]}
>
  <p
    className="css-1h92lle"
  >
    1
  </p>
</div>
`;
